objects/CIP_History_Alpha_Prefix_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive_Approving3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Executive Approving</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anthem_Account_Entity_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Anthem Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavioral_Health_Pre_Cert_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Behavioral Health Pre-Cert Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CIP_History__c</fullName>
        <label>CIP History</label>
        <referenceTo>Client_Intake_Process_History__c</referenceTo>
        <relationshipLabel>CIP History Alpha Prefix Requests</relationshipLabel>
        <relationshipName>CIP_History_Alpha_Prefix_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments_Additional_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments/Additional Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_Terminations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments Terminations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Control_Plan_Code_System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Control Plan Code / System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_HQ_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corporate HQ State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_HQ_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corporate HQ Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_No_Prods_Networks__c</fullName>
        <label>Count No Prods Networks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DME_Pre_Cert_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DME Pre-Cert Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Existing_Prefixes_Being_Terminated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Existing Prefixes Being Terminated</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Prefixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Existing Impacted Prefixes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Carrier_If_Known__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Future Carrier (If Known)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number_Change_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number Change From</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number_Change_To_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number Change To</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imaging_Radiology_Pre_Cert_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Imaging/Radiology Pre-Cert Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Implementation_Coordinator_Name1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementation Coordinator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementations_Director_Approving_User__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Implementations Director Approving</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interplan_AM_Approving2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Interplan AM Approving</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Institutional_Inpatient__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LOB - Institutional Inpatient</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Institutional_Outpatient__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LOB - Institutional Outpatient</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB_Professional__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LOB - Professional</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Contract_Situs_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Entity/ Contract Situs State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Policy_Branding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Policy Branding</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Policy_URL2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Policy URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Surgical_Pre_Cert_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical &amp; Surgical Pre-Cert Phone#</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Migrating_Business_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Migrating Business From</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Pre_Cert_Pre_Auth_Branding__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>National Pre-Cert / Pre-Auth Branding</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_NOT_Prefix_Confirmed__c</fullName>
        <label>Number NOT Prefix Confirmed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Missing_Prefix_Control_Plans__c</fullName>
        <label>Number of Missing Prefix &amp; Control Plans</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <label>Number of Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Products_w_o_Control_Plan__c</fullName>
        <label>Number of Products w/o Control Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operations_Director_Approving_User__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Operations Director Approving</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Custom_Networks_Needed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Custom Networks Needed</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Area_Non_Emergency_Benefits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Out of Area Non-Emergency Benefits</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Company Name 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prefix_Cancel_Date_Manual__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefix Cancel Date Manual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prefix_Cancel_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefix Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prefix_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prefix Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prefix_Effective_Date_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefix Effective Date of Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prefix_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prefixes_Being_Returned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prefixes Being Returned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Private_Exchange_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Private Exchange Account</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Exchange_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Private Exchange Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Network_Count__c</fullName>
        <label>Prod/Network Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profile_Run_Out_Period_Months__c</fullName>
        <label>Profile Run-Out Period (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_For_Different_Run_Out_Period__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason For Different Run-Out Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_For_Return__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason For Return</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Prefix_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Prefix Change</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Termination__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Termination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requestor_Title2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Prefix_InterPlan_AM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Returned Prefix</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID Account</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Client_Intake_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy Client Intake Process</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Name2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Executive Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Provider_Svc_Routing_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Single Provider Svc Routing Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Special_Routing_Phone_Optional__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Routing Phone # (Optional)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Migrating Business To</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Corporate_HQ_Website2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL Corporate HQ Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Medical_Policy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL Medical Policy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL_Pre_Cert_Pre_Authorization2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL Pre-Cert &amp; Pre-Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter_Name1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Underwriter Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utilize_Castlight__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Utilize Castlight</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>CIP History Alpha Prefix Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CIP History  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIP History Alpha Prefix Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>